added link. the circle is complete

--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
             <p>A Bootstrap theme for 31337 H4X0RS. Inspired by the classic green on black terminal style, this bootstrap theme will make your website 1337.</p>
             <p>To hack around with the source or contribute, check out the project on Github</p>
             <p>
-                <a class="btn btn-lg btn-primary" href="#" role="button">View on Github »</a>
+                <a class="btn btn-lg btn-primary" href="//github.com/brobin/hacker-bootstrap" role="button">View on Github »</a>
             </p>
         </div>
 
