added zen and bacon

--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
             <p>A Bootstrap theme for 31337 H4X0RS. Inspired by the classic green on black terminal style, this bootstrap theme will make your website 1337.</p>
             <p>To hack around with the source or contribute, check out the project on Github</p>
             <p>
-                <a class="btn btn-lg btn-primary" href="//github.com/brobin/hacker-bootstrap" role="button">View on Github »</a>
+                <a class="btn btn-lg btn-primary" href="//github.com/brobin/" role="button">View on Github »</a>
             </p>
         </div>
 
@@ -420,9 +420,9 @@
                         <a aria-expanded="false" class="dropdown-toggle" data-toggle="dropdown" href="#">Dropdown <span class="caret"></span>
                         </a>
                         <ul class="dropdown-menu">
-                            <li><a href="#dropdown1" data-toggle="tab">Action</a></li>
+                            <li><a href="#dropdown1" data-toggle="tab">Bacon</a></li>
                             <li class="divider"></li>
-                            <li><a href="#dropdown2" data-toggle="tab">Another action</a></li>
+                            <li><a href="#dropdown2" data-toggle="tab">Zen of Python</a></li>
                         </ul>
                     </li>
                 </ul>
@@ -434,10 +434,10 @@
                         <p>Food truck fixie locavore, accusamus mcsweeney's marfa nulla single-origin coffee squid. Exercitation +1 labore velit, blog sartorial PBR leggings next level wes anderson artisan four loko farm-to-table craft beer twee. Qui photo booth letterpress, commodo enim craft beer mlkshk aliquip jean shorts ullamco ad vinyl cillum PBR. Homo nostrud organic, assumenda labore aesthetic magna delectus mollit.</p>
                     </div>
                     <div class="tab-pane fade" id="dropdown1">
-                        <p>Etsy mixtape wayfarers, ethical wes anderson tofu before they sold out mcsweeney's organic lomo retro fanny pack lo-fi farm-to-table readymade. Messenger bag gentrify pitchfork tattooed craft beer, iphone skateboard locavore carles etsy salvia banksy hoodie helvetica. DIY synth PBR banksy irony. Leggings gentrify squid 8-bit cred pitchfork.</p>
+                        <p>Bacon ipsum dolor amet kielbasa bacon swine boudin brisket hamburger bresaola chicken filet mignon fatback leberkas beef ribs salami. Leberkas rump ball tip landjaeger bresaola salami drumstick sausage pork loin picanha pork chop. Sausage short loin swine pork filet mignon pork belly landjaeger cupim, frankfurter corned beef venison drumstick. Filet mignon rump picanha drumstick shank ball tip doner frankfurter shoulder. Meatloaf tri-tip porchetta tail, fatback boudin rump strip steak doner cow jerky pork loin turkey cupim. Cupim prosciutto sausage kevin pork loin, beef ribs chuck tail salami rump meatloaf shank. Pork belly fatback chuck, alcatra short ribs kevin landjaeger drumstick pig tongue jowl.</p>
                     </div>
                     <div class="tab-pane fade" id="dropdown2">
-                        <p>Trust fund seitan letterpress, keytar raw denim keffiyeh etsy art party before they sold out master cleanse gluten-free squid scenester freegan cosby sweater. Fanny pack portland seitan DIY, art party locavore wolf cliche high life echo park Austin. Cred vinyl keffiyeh DIY salvia PBR, banh mi before they sold out farm-to-table VHS viral locavore cosby sweater.</p>
+                        <p>Beautiful is better than ugly. Explicit is better than implicit. Simple is better than complex. Complex is better than complicated. Flat is better than nested. Sparse is better than dense. Readability counts. Special cases aren't special enough to break the rules. Although practicality beats purity. Errors should never pass silently. Unless explicitly silenced. In the face of ambiguity, refuse the temptation to guess. There should be one-- and preferably only one --obvious way to do it. Although that way may not be obvious at first unless you're Dutch. Now is better than never. Although never is often better than *right* now. If the implementation is hard to explain, it's a bad idea. If the implementation is easy to explain, it may be a good idea. Namespaces are one honking great idea -- let's do more of those!</p>
                     </div>
                 </div>
             </div>
