--- a/index.html
+++ b/index.html
@@ -11,8 +11,6 @@
     <style>
     .tall-row {
         margin-top: 40px;
-        margin-left:20px;
-        margin-right:20px;
     }
     .modal {
         position: relative;
@@ -70,14 +68,18 @@
             <p>A Bootstrap theme for 31337 H4X0RS. Inspired by the classic green on black terminal style, this bootstrap theme will make your website 1337.</p>
             <p>To hack around with the source or contribute, check out the project on Github</p>
             <p>
-                <a class="btn btn-lg btn-primary" href="//github.com/brobin/" role="button">View on Github »</a>
+                <a class="btn btn-lg btn-primary" href="//github.com/brobin/hacker-bootstrap/" role="button">View on Github »</a>
             </p>
         </div>
 
         <!-- Typography -->
         <div class="row tall-row">
-            <h1>Typography</h1>
-            <hr>
+            <div class="col-lg-12">
+                <h1>Typography</h1>
+                <hr>
+            </div>
+        </div>
+        <div class="row">
             <div class="col-md-4">
                 <h1>Heading 1</h1>
                 <h2>Heading 2</h2>
@@ -105,8 +107,12 @@
 
         <!-- Buttons -->
         <div class="row tall-row">
-            <h1>Buttons</h1>
-            <hr>
+            <div class="col-lg-12">
+                <h1>Buttons</h1>
+                <hr>
+            </div>
+        </div>
+        <div class="row">
             <div class="col-sm-6">
                 <a href="#" class="btn btn-default">Default</a>
                 <a href="#" class="btn btn-primary">Primary</a>
@@ -121,68 +127,78 @@
 
         <!-- Tables -->
         <div class="row tall-row">
-            <h1>Tables</h1>
-            <hr>
-            <table class="table table-striped table-hover ">
-                <thead>
-                    <tr>
-                        <th>#</th>
-                        <th>House</th>
-                        <th>Sigil</th>
-                        <th>Seat</th>
-                    </tr>
-                </thead>
-                <tbody>
-                    <tr>
-                        <td>1</td>
-                        <td>Stark</td>
-                        <td>Direwolf</td>
-                        <td>Winterfell</td>
-                    </tr>
-                    <tr>
-                        <td>2</td>
-                        <td>Lannister</td>
-                        <td>Lion</td>
-                        <td>Casterly Rock</td>
-                    </tr>
-                    <tr class="info">
-                        <td>3</td>
-                        <td>Baratheon</td>
-                        <td>Stag</td>
-                        <td>Storm's End</td>
-                    </tr>
-                    <tr class="success">
-                        <td>4</td>
-                        <td>Targaryen</td>
-                        <td>3-headed Dragon</td>
-                        <td>Slaver's Bay</td>
-                    </tr>
-                    <tr class="danger">
-                        <td>5</td>
-                        <td>Martell</td>
-                        <td>Sun pierced by a spear</td>
-                        <td>Sunspear</td>
-                    </tr>
-                    <tr class="warning">
-                        <td>6</td>
-                        <td>Tully</td>
-                        <td>Trout</td>
-                        <td>Riverrun</td>
-                    </tr>
-                    <tr class="active">
-                        <td>7</td>
-                        <td>Bolton</td>
-                        <td>Red flayed man</td>
-                        <td>Dreadfort / Winterfell</td>
-                    </tr>
-                </tbody>
-            </table> 
+            <div class="col-lg-12">
+                <h1>Tables</h1>
+                <hr>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-lg-12">
+                <table class="table table-striped table-hover ">
+                    <thead>
+                        <tr>
+                            <th>#</th>
+                            <th>House</th>
+                            <th>Sigil</th>
+                            <th>Seat</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        <tr>
+                            <td>1</td>
+                            <td>Stark</td>
+                            <td>Direwolf</td>
+                            <td>Winterfell</td>
+                        </tr>
+                        <tr>
+                            <td>2</td>
+                            <td>Lannister</td>
+                            <td>Lion</td>
+                            <td>Casterly Rock</td>
+                        </tr>
+                        <tr class="info">
+                            <td>3</td>
+                            <td>Baratheon</td>
+                            <td>Stag</td>
+                            <td>Storm's End</td>
+                        </tr>
+                        <tr class="success">
+                            <td>4</td>
+                            <td>Targaryen</td>
+                            <td>3-headed Dragon</td>
+                            <td>Slaver's Bay</td>
+                        </tr>
+                        <tr class="danger">
+                            <td>5</td>
+                            <td>Martell</td>
+                            <td>Sun pierced by a spear</td>
+                            <td>Sunspear</td>
+                        </tr>
+                        <tr class="warning">
+                            <td>6</td>
+                            <td>Tully</td>
+                            <td>Trout</td>
+                            <td>Riverrun</td>
+                        </tr>
+                        <tr class="active">
+                            <td>7</td>
+                            <td>Bolton</td>
+                            <td>Red flayed man</td>
+                            <td>Dreadfort / Winterfell</td>
+                        </tr>
+                    </tbody>
+                </table> 
+            </div>
         </div>
 
         <!-- Progress Bars -->
         <div class="row tall-row">
-            <h1>Progress Bars</h1>
-            <hr>
+            <div class="col-lg-12">
+                <h1>Progress Bars</h1>
+                <hr>
+            </div>
+        </div>
+        <div class="row">
             <div class="col-lg-12">
                 <h3>Normal</h3>
                 <div class="progress">
@@ -237,8 +253,12 @@
 
         <!-- Forms -->
         <div class="row tall-row">
-            <h1>Forms</h1>
-            <hr>
+            <div class="col-lg-12">
+                <h1>Forms</h1>
+                <hr>
+            </div>
+        </div>
+        <div class="row">
             <div class="col-lg-6">
                 <div class="well">
                     <form class="form-horizontal">
@@ -365,8 +385,12 @@
 
         <!-- Navs -->
         <div class="row tall-row">
-            <h1>Navs</h1>
-            <hr>
+            <div class="col-lg-12">
+                <h1>Navs</h1>
+                <hr>
+            </div>
+        </div>
+        <div class="row">
             <div class="col-md-4">
                 <h3>Pagination</h3>
                 <ul class="pagination pagination-lg">
@@ -445,8 +469,12 @@
 
         <!-- Panels -->
         <div class="row tall-row">
-            <h1>Panels</h1>
-            <hr>
+            <div class="col-lg-12">
+                <h1>Panels</h1>
+                <hr>
+            </div>
+        </div>
+        <div class="row">
             <div class="col-md-4">
                 <div class="panel panel-default">
                     <div class="panel-body">Basic panel</div>
@@ -492,8 +520,12 @@
 
         <!-- List Groups -->
         <div class="row tall-row">
-            <h1>List Groups</h1>
-            <hr>
+            <div class="col-lg-12">
+                <h1>List Groups</h1>
+                <hr>
+            </div>
+        </div>
+        <div class="row">
             <div class="col-lg-4">
                 <ul class="list-group">
                     <li class="list-group-item">
@@ -533,8 +565,12 @@
 
         <!-- Wells -->
         <div class="row tall-row">
-            <h1>Wells</h1>
-            <hr>
+            <div class="col-lg-12">
+                <h1>Wells</h1>
+                <hr>
+            </div>
+        </div>
+        <div class="row">
             <div class="col-md-4">
                 <div class="well">
                     Look, I'm in a well!
@@ -557,6 +593,10 @@
             <div class="col-lg-12">
                 <h2>Alerts</h2>
                 <hr>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-lg-12">
                 <div class="alert alert-dismissible alert-warning">
                     <button type="button" class="close">×</button>
                     <h4>Warning!</h4>
@@ -587,8 +627,12 @@
 
         <!-- Dialogs -->
         <div class="row tall-row">
-            <h1>Modals</h1>
-            <hr>
+            <div class="col-lg-12">
+                <h1>Modals</h1>
+                <hr>
+            </div>
+        </div>
+        <div class="row"
             <div class-="col-sm-6">
                 <div class="modal">
                     <div class="modal-dialog">
