fixed up the layout and footer

--- a/index.html
+++ b/index.html
@@ -632,8 +632,8 @@
                 <hr>
             </div>
         </div>
-        <div class="row"
-            <div class-="col-sm-6">
+        <div class="row">
+            <div class="col-md-12">
                 <div class="modal">
                     <div class="modal-dialog">
                         <div class="modal-content">
@@ -654,12 +654,11 @@
             </div>
         </div>
 
-        <!-- footer -->
-        <footer>
-            <div class="row">
-                <p>Created by Tobin Brown. &copy; 2015</p>
+        <div class="row tall-row">
+            <div class="col-md-12">
+                <p>Created by <a href="//brobin.me">Tobin Brown</a>. &copy; 2015</p>
             </div>
-        </footer>
+        </div>
 
     </div>
 
