--- a/index.html
+++ b/index.html
@@ -26,6 +26,8 @@
 
 <body>
 
+    <a href="https://github.com/brobin/hacker-bootstrap"><img style="position: absolute; top: 0; right: 0; border: 0;z-index:1001;" src="https://camo.githubusercontent.com/a6677b08c955af8400f44c6298f40e7d19cc5b2d/68747470733a2f2f73332e616d617a6f6e6177732e636f6d2f6769746875622f726962626f6e732f666f726b6d655f72696768745f677261795f3664366436642e706e67" alt="Fork me on GitHub" data-canonical-src="https://s3.amazonaws.com/github/ribbons/forkme_right_gray_6d6d6d.png"></a>
+
     <nav class="navbar navbar-default navbar-static-top">
         <div class="container">
             <div class="navbar-header">
@@ -68,7 +70,8 @@
             <p>A Bootstrap theme for 31337 H4X0RS. Inspired by the classic green on black terminal style, this bootstrap theme will make your website 1337.</p>
             <p>To hack around with the source or contribute, check out the project on Github</p>
             <p>
-                <a class="btn btn-lg btn-primary" href="//github.com/brobin/hacker-bootstrap/" role="button">View on Github »</a>
+                <a class="btn btn-lg btn-primary" href="//github.com/brobin/hacker-bootstrap/" role="button">Star on Github »</a>
+                <a class="btn btn-primary" href="//github.com/brobin/hacker-bootstrap/" id="stars"></a>
             </p>
         </div>
 
@@ -664,6 +667,16 @@
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
     <script src="//maxcdn.bootstrapcdn.com/bootstrap/3.3.4/js/bootstrap.min.js"></script>
+
+    <!-- Github stars script -->
+    <script>
+    $(document).ready(function(){
+        $.getJSON("https://api.github.com/repos/brobin/hacker-bootstrap/stargazers", function(data){
+            var stars = data.length;
+            $("#stars").text(stars + " stars");
+        });
+    });
+    </script>
 
 </body>
 </html>
